# src/swagger.json
@@ -6476,6 +6476,39 @@
           }
         }
       }
+    },
+    "/aluno/avaliacao/{avaliacaoId}": {
+      "get": {
+        "summary": "Ver toda a informação de uma avaliação",
+        "description": "Esta rota vai apresentar todos os dados de uma avaliação",
+        "tags": ["Avaliações"],
+        "security": [{ "basicAuth": [] }],
+        "parameters": [
+          {
+            "name": "avaliacaoId",
+            "in": "path",
+            "description": "Id da avaliacao",
+            "required": true,
+            "schema": { "properties": { "avaliacaoId": { "type": "string" } } }
+          }
+        ],
+        "responses": {
+          "500": { "description": "ERROR" },
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": { "properties": { "msg": { "type": "string" } } },
+                "examples": {
+                  "Ver Dados de uma  Avaliação": {
+                    "value": { "msg": "Operação realizada com sucesso" }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
